add convert modal

--- a/src/resources/model_convertor_page_v2.html
+++ b/src/resources/model_convertor_page_v2.html
@@ -15,24 +15,26 @@
     
     </button>
     <!-- 模态框（Modal） -->
-    <div class="modal fade" id="convertorModal" tabindex="-1" role="dialog" aria-labelledby="convertorModalLabel" aria-hidden="true" style="background-color: #333;">
+    <div class="modal fade" id="convertorModal" tabindex="-1" role="dialog" data-backdrop="static" aria-labelledby="convertorModalLabel" aria-hidden="true" style="background-color: #333;">
         <div class="modal-dialog" style="background-color: #333;">
             <div class="modal-content" style="background-color: #333;">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true" style="color: antiquewhite;">
                         &times;
                     </button>
-                    <h4 class="modal-title" id="convertorModalLabel">
-                        转换进度
+                    <h4 id="modal_header" class="modal-title" id="convertorModalLabel">
+                        转换进度(处理中......)
                     </h4>
                 </div>
                 <div class="modal-body">
                     <div class="progress progress-striped active">
                         <div id="task_progress_div" class="progress-bar progress-bar-success" role="progressbar"
                              aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"
-                             style="width: 80%;">
-                            <span class="sr-only">40% 完成</span>
+                             style="width: 0%;">
+                            <span id="progress_val" class="sr-only">0</span>
                         </div>
+                    </div>
+                    <div id="log_output_div" style="overflow: auto;width: 100%;height: 300px;">
                     </div>
                 </div>
             </div><!-- /.modal-content -->
@@ -83,14 +85,39 @@
 
 <script>
       $(document).ready(function(){
+        let interval_counter = undefined;
           window.addEventListener("message", function(evt){
             console.log("ANN 转SNN 模型接收到extension 消息："+evt.data);
               const data = JSON.parse(evt.data);
               if(data.ann_model_start_convert){
                   console.log("启动转换进度条");
                   $("#modal_dialog").click();
+              }else if(data.log_output){
+                let prevData = $("#log_output_div").text();
+                prevData += data.log_output;
+                if(prevData.length >= 10000){
+                  prevData = prevData.substring(prevData.length-10000, prevData.length);
+                }
+                $("#log_output_div").html(prevData);
+                document.getElementById("log_output_div").scrollTop = document.getElementById("log_output_div").scrollHeight();
+              }else if(data.exec_finish){
+                document.getElementById("task_progress_div").style.width = ""+100+"%";
+                $("#modal_header").text("转换结束！");
+                clearInterval(interval_counter);
               }
           });
+
+          setTimeout(function(){
+            interval_counter = window.setInterval(function(){
+              var progress = parseInt($("#progress_val").text());
+              progress += 1;
+              if(progress >= 90){
+                return;
+              }
+              $("#progress_val").text(""+progress);
+              document.getElementById("task_progress_div").style.width = ""+progress+"%";
+            },10000);
+          }, 2000);
       });
 </script>
 
